@@ -8,7 +8,8 @@ font-style: italic;
 }
 
 .parameter {
-color: brown;
+font-weight: bold;
+color: red;
 }
 
 .programlisting {
